data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_547.wast
;; 8. **Test Description**: Compose a loop that constantly reinitializes due to incorrect `br` behavior, with a separate independent condition inside to verify if the loop is ever exited.    **Constraint Checked**: Check reinitialization of loop execution and branch instruction behavior.    **Relation to Infinite Loops**: Demonstrates if incorrect reinitialization can cause infinite loops, and if independent conditions are disregarded.

(assert_invalid
  (module
    (func $loop_reinit_independent_cond (result i32)
      (loop (result i32)
        (br 0)  ;; Causes reinitialization
        (if (i32.const 1)  ;; Independent condition
          (then
            (return (i32.const 42))
          )
        )
      )
    )
  )
  "type mismatch"
)